--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,93 +9,94 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/night"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".SignupActivity">
 
- <View
-     android:id="@+id/view2"
-     android:layout_width="300dp"
-     android:layout_height="340dp"
-     android:background="#58666666"
-     app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintStart_toStartOf="parent"
-     app:layout_constraintTop_toTopOf="@+id/Title" />
+    <View
+        android:id="@+id/view2"
+        android:layout_width="300dp"
+        android:layout_height="380dp"
+        android:background="#58666666"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/Title" />
 
     <TextView
         android:id="@+id/Title"
-        android:text="적 음"
+        android:text="회원가입"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textColor="@color/white"
         android:layout_marginTop="50dp"
-        android:paddingTop="25dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/etId"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-         />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/etId"
-        android:layout_width="200dp"
+        android:hint="이메일"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-       android:hint="이메일"
         android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/etPassWord"
-        android:layout_width="200dp"
+        android:hint="비밀번호"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/etId"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:hint="비밀번호"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:text="이메일로 로그인"
-        android:background="@drawable/bnt_login"
+    <EditText
+        android:id="@+id/etPassWordCheck"
+        android:hint="비밀번호 확인"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
         android:layout_width="200dp"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/etPassWord"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-         />
+        android:inputType="textPassword" />
+
+    <EditText
+        android:id="@+id/etNickname"
+        android:hint="저자"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/etPassWordCheck"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btnRegister"
-        android:text="회원가입"
+        android:text="회원가입 완료"
         android:background="@drawable/bnt_login"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/etNickname"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <!--
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/progress"
-            android:visibility="invisible"/>
-            -->
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
