--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -90,7 +90,7 @@
     <Button
         android:id="@+id/btnRegister"
         android:text="회원가입 완료"
-        android:background="@drawable/bnt_login"
+        app:backgroundTint="#330099"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/etNickname"
