--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,7 +14,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="300dp"
-        android:layout_height="380dp"
+        android:layout_height="390dp"
         android:background="#58666666"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +25,7 @@
         android:text="회원가입"
         android:textColor="@color/white"
         android:textSize="30sp"
+        android:paddingTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
