--- a/app/src/main/res/layout/activity_showtext.xml
+++ b/app/src/main/res/layout/activity_showtext.xml
@@ -4,19 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowMyText"
+    tools:context=".Showtext"
     android:background="@drawable/background_img">
 
-    <Button
-        android:id="@+id/fetch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="확인"
-        android:background="#003F51B5"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,11 +15,11 @@
         android:textSize="20dp"
         android:id="@+id/close_btn"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#003F51B5"
+        android:background="@color/invisible"
         android:layout_marginTop="10dp"/>
 
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="330dp"
         android:layout_height="500dp"
         android:background="#683C4575"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +30,5 @@
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="25dp"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
