--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#292D45</color>
+    <color name="colorPrimaryDark">#292D45</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_500">#292D45</color>
+    <color name="purple_700">#292D45</color>
+    <color name="teal_200">#FFC107</color>
+    <color name="teal_700">#CDAD4B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey1">#FF999999</color>
     <color name="grey2">#FF666666</color>
+    <color name = "invisible" >#00FFFFFF</color>
 </resources>
