--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,23 +17,26 @@
      android:layout_width="300dp"
      android:layout_height="340dp"
      android:background="#58666666"
-     app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintRight_toRightOf="parent"
+     app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="@+id/Title"/>
 
     <TextView
         android:id="@+id/Title"
-        android:text="적 음"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:paddingTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="59dp"
+        android:fontFamily="@font/songmyung_regular"
+        android:paddingTop="25dp"
+        android:text="적 음"
+        android:textColor="@color/white"
+        android:textSize="70sp"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etId"
@@ -42,11 +45,12 @@
         android:textColorHint="@color/white"
         android:backgroundTint="@color/white"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@+id/Title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-       android:hint="이메일"
+        android:gravity="center"
+        android:hint="이메일"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -58,6 +62,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/etId"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:hint="비밀번호"
@@ -67,11 +72,10 @@
        android:id="@+id/btnLogin"
        style="@style/FirebaseUI.Button"
        android:textColor="@color/white"
-       app:backgroundTint="#330099"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
-       android:layout_marginTop="10dp"
-       android:text="이메일로 로그인"
+       android:layout_marginTop="30dp"
+       android:text="로그인"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassWord" />
@@ -79,7 +83,6 @@
     <Button
         android:id="@+id/btnRegister"
         android:text="회원가입"
-        app:backgroundTint="#330099"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
