--- a/app/src/main/res/layout/activity_showtext.xml
+++ b/app/src/main/res/layout/activity_showtext.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Showtext"
-    android:background="@drawable/background_img">
+    android:background="@drawable/night">
 
     <Button
         android:layout_width="wrap_content"
@@ -15,13 +15,13 @@
         android:textSize="20dp"
         android:id="@+id/close_btn"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/invisible"
+        android:background="#00FFFFFF"
         android:layout_marginTop="10dp"/>
 
     <TextView
         android:layout_width="330dp"
         android:layout_height="500dp"
-        android:background="#683C4575"
+        android:background="#58666666"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
