--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="My page">
+    <item android:title="">
         <menu>
-            <item android:title="글 작성" />
-            <item android:title="나의 글" />
-            <item android:title="너의 글" />
-            <item android:title="나의 모음집" />
-            <item android:title="글감" />
+            <item android:title="글 작성"
+                android:id = "@+id/write"/>
+            <item android:title="나의 글"
+                android:id = "@+id/my"/>
+            <item android:title="너의 글"
+                android:id = "@+id/your"/>
+            <item android:title="글감"
+                android:id = "@+id/words"/>
         </menu>
     </item>
 
     <item android:title="">
         <menu>
-            <item android:title="알림 off" />
-            <item android:title="설정" />
+            <item android:title="알림 off"
+                android:id = "@+id/alarm"/>
+            <item android:title="설정"
+                android:id = "@+id/logout"/>
         </menu>
     </item>
 
