--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,24 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="">
-        <menu>
-            <item android:title="글 작성"
-                android:id = "@+id/write"/>
-            <item android:title="나의 글"
-                android:id = "@+id/my"/>
-            <item android:title="너의 글"
-                android:id = "@+id/your"/>
-            <item android:title="글감"
-                android:id = "@+id/words"/>
-        </menu>
-    </item>
-
-    <item android:title="">
+        <group android:checkableBehavior="single">
+        <item android:title="글 작성"
+            android:id = "@+id/write" />
+        <item android:title="나의 글"
+            android:id = "@+id/my" />
+        <item android:title="너의 글"
+            android:id = "@+id/your" />
+        <item android:title="글감"
+            android:id = "@+id/words" />
+    </group>
         <menu>
             <item android:title="알림 off"
                 android:id = "@+id/alarm"/>
-            <item android:title="설정"
-                android:id = "@+id/logout"/>
+            <item android:title="로그아웃"
+                android:id = "@+id/logout" />
         </menu>
     </item>
 
