--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,5 +6,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name = "text_theme">
+        <item name = "android:textSize">17dp</item>
+    </style>
 
 </resources>
