--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,4 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name = "text_theme">
+        <item name = "android:textSize">17dp</item>
+    </style>
 </resources>
