--- a/app/src/main/res/layout/my_writinglist_view.xml
+++ b/app/src/main/res/layout/my_writinglist_view.xml
@@ -8,7 +8,7 @@
     android:layout_marginBottom="8dp"
     android:background="#20222E"
     android:layout_marginTop="10dp"
-    android:layout_margin="15dp">
+    android:layout_margin="12dp">
     <!--<TextView
         android:id="@+id/textlist"
         android:layout_width="330dp"
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="90dp"
+        android:layout_height="100dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center_vertical">
@@ -32,20 +32,23 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:includeFontPadding="false"
             android:text="TITLE"
-            android:textSize="30sp"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"/>
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:maxLength="15"
+            android:layout_marginLeft="17dp"
             android:text="content"
             android:textColor="#8A8989"
-            android:textSize="20sp" />
+            android:textSize="21sp" />
     </LinearLayout>
 
 </LinearLayout>
