--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -15,8 +15,8 @@
         <menu>
             <item android:title="알림 off"
                 android:id = "@+id/alarm"/>
-            <item android:title="로그아웃"
-                android:id = "@+id/logout" />
+            <item android:title="설정"
+                android:id = "@+id/setting" />
         </menu>
     </item>
 </menu>
