--- a/app/src/main/res/layout/activity_searchtextshow.xml
+++ b/app/src/main/res/layout/activity_searchtextshow.xml
@@ -26,7 +26,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/show"
+        android:id="@+id/showtext"
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="20dp"
