--- a/app/src/main/res/layout/my_writinglist_view.xml
+++ b/app/src/main/res/layout/my_writinglist_view.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:layout_marginTop="5dp"
             android:maxLength="15"
             android:layout_marginLeft="17dp"
             android:text="content"
