--- a/app/src/main/res/layout/my_writinglist_view.xml
+++ b/app/src/main/res/layout/my_writinglist_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
@@ -22,12 +22,11 @@
         app:layout_constraintTop_toTopOf="parent"/>-->
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_weight="1"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:gravity="center_vertical">
-
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -38,7 +37,24 @@
             android:textColor="#FFFFFF"
             android:textSize="34sp"
             android:textStyle="bold" />
-
+        <TextView
+            android:id="@+id/author"
+            android:width="100dp"
+            android:height="35dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:gravity="bottom"
+            android:textColor="#FFFFFF"
+            android:text=""
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        >
         <TextView
             android:id="@+id/sub"
             android:layout_width="wrap_content"
@@ -50,5 +66,4 @@
             android:textColor="#8A8989"
             android:textSize="21sp" />
     </LinearLayout>
-
 </LinearLayout>
