나의글 에러 수정

--- a/app/src/main/res/layout/my_writinglist_view.xml
+++ b/app/src/main/res/layout/my_writinglist_view.xml
@@ -47,7 +47,7 @@
             android:textSize="18sp"
             android:gravity="bottom"
             android:textColor="#FFFFFF"
-            android:text="author"
+            android:text=""
             />
     </LinearLayout>
     <LinearLayout
