--- a/app/src/main/res/layout/activity_your_detail.xml
+++ b/app/src/main/res/layout/activity_your_detail.xml
@@ -42,6 +42,7 @@
         app:layout_constraintTop_toBottomOf="@+id/title"/>
 
     <TextView
+        android:id="@+id/content"
         android:layout_width="270dp"
         android:layout_height="350dp"
         app:layout_constraintTop_toTopOf="@+id/view"
