--- a/app/src/main/res/layout/activity_my_writing.xml
+++ b/app/src/main/res/layout/activity_my_writing.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="70dp"
         android:textColor="@color/white"
@@ -34,15 +34,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="@+id/sub"
         android:text="X"
-        style="?android:attr/borderlessButtonStyle"
         android:textSize="30sp"
         android:id="@+id/close_btn"
+        style="?android:attr/borderlessButtonStyle"
         android:backgroundTint="#00FFFFFF"
         android:background="#00FFFFFF"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
