--- a/app/src/main/res/layout/activity_searchtextshow.xml
+++ b/app/src/main/res/layout/activity_searchtextshow.xml
@@ -12,11 +12,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         android:text="X"
-        android:textSize="20dp"
         android:id="@+id/close_button"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#00FFFFFF"
-        android:layout_marginTop="10dp"/>
+        android:textSize="25dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="20dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="#00FFFFFF"
+        android:background="#00FFFFFF" />
 
     <TextView
         android:layout_width="330dp"
