--- a/app/src/main/res/layout/activity_your_detail.xml
+++ b/app/src/main/res/layout/activity_your_detail.xml
@@ -12,11 +12,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         android:text="X"
-        android:textSize="20dp"
         android:id="@+id/close_btn"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="#00FFFFFF"
-        android:layout_marginTop="10dp"/>
+        android:textSize="25dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toTopOf="@id/title"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="#00FFFFFF"
+        android:background="#00FFFFFF"/>
 
     <TextView
         android:id="@+id/title"
@@ -52,7 +54,5 @@
         android:textSize="20sp"
         android:textColor="#8A8989"
         />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
