--- a/app/src/main/res/layout/activity_your_writing.xml
+++ b/app/src/main/res/layout/activity_your_writing.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
         android:layout_marginLeft="30dp"
         android:layout_marginBottom="50dp"
         android:textColor="@color/white"
@@ -45,14 +45,12 @@
         android:textSize="28dp"
         android:fontFamily="@font/songmyung_regular"
         android:text="이런 글도 있어요"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="@+id/title"
         android:text="X"
         android:textSize="30sp"
         android:id="@+id/close_btn"
