--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="50dp"
         android:text="적음"
         android:textColor="@color/white"
-        android:textSize="80sp"
+        android:textSize="65sp"
         android:fontFamily="@font/songmyung_regular"
         android:layout_marginTop="90dp"/>
 
@@ -45,95 +45,94 @@
         app:layout_constraintTop_toBottomOf="@+id/hi_text"
         android:layout_marginTop="20dp"/>
 
+    <TextView
+        android:id="@+id/intro_text1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="15dp"
+        android:text="'적음'은"
+        app:layout_constraintTop_toBottomOf="@+id/hi_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linear1"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
     <View
         android:id="@+id/linear1"
         android:layout_width="200dp"
         android:layout_height="2dp"
         android:layout_centerInParent="true"
         android:background="#59FFFFFF"
-        android:layout_marginTop="90dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginTop="140dp"
         app:layout_constraintTop_toBottomOf="@+id/hi_text"
-        app:layout_constraintBottom_toTopOf="@+id/ex_word"
+        app:layout_constraintBottom_toTopOf="@+id/push_time"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/dot"
+        android:id="@+id/push_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/ex_word"
-        android:textColor="@color/white"
-        android:textSize="30sp"
+        android:text="같은 곳에서"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="25dp"
-        android:fontFamily="@font/songmyung_regular"
-        android:text=". . ."/>
-
-    <TextView
-        android:id="@+id/ex_word"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sub_text"
-        app:layout_constraintBottom_toTopOf="@+id/linear2"
-        android:textColor="@color/white"
         android:textSize="50sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/linear1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linear2"
         android:fontFamily="@font/songmyung_regular"
-        android:text="'글감'"/>
-
+        android:textColor="@color/white"/>
 
     <View
         android:id="@+id/linear2"
         android:layout_width="200dp"
         android:layout_height="2dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
         android:background="#59FFFFFF"
-        app:layout_constraintBottom_toTopOf="@id/intro_text1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <TextView
-        android:id="@+id/intro_text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/push_time"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ex_word"
-        android:text="매일 날이 바뀌며"
-        android:layout_marginTop="35dp"
-        android:textSize="20sp"
-        android:textColor="@color/white"/>
-
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/intro_text2"/>
 
     <TextView
         android:id="@+id/intro_text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intro_text1"
-        android:text="새로운 글감이"
+        android:text="기다리고 있을게요"
         android:layout_marginTop="20dp"
         android:textSize="20sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/linear2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
     <TextView
         android:id="@+id/intro_text3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/intro_text2"
-        android:text="나타납니다."
-        android:layout_marginTop="20dp"
+        android:text="언제든 찾아와주세요"
+        android:layout_marginTop="10dp"
         android:textSize="20sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/intro_text2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="X"
+        app:layout_constraintBottom_toTopOf="@+id/title"
+        app:layout_constraintRight_toRightOf="parent"
+        style="?android:attr/borderlessButtonStyle"
+        android:backgroundTint="#00FFFFFF"
+        android:background="#00FFFFFF"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
